pngdec: Fix interlaced 1bpp Fixes Ticket214

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>